--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to my Webpage</h1>
+    <h1 style="color:blue;">Welcome to my Webpage</h1>
     <h2>Hello</h2>
     <h3>THis is a head 3</h3>
     Hello World
